--- a/pages/question2.html
+++ b/pages/question2.html
@@ -92,7 +92,7 @@
                                                 <button id="Lname">Last name first</button>
                                             </div>
                                             <div class="d-flex justify-content-center mt-5">
-                                                <div class="btn-group btn-group-sm mt-5">
+                                                <div class="btn-group btn-group-sm mt-5 dark-text">
                                                     <button id="aBtn"
                                                         class="btn btn-default border border-primary">A</button>
                                                     <button id="bBtn"
